yoshimi 1.5.6 M

2018-2-12 Will
* Alienwah and Dynfilter effect limits done.
  (not filter insert for dynfilter)
* BugFix: Phaser d/y wrongly reducing default insert level.

2018-2-11 Will
* Improved bank import error reporting.
* Implemented bank export.
* Chorus and Distortion effect limits done.

2018-2-8 Will
* Started major upgrade to effects limits.
  Reverb completed others begun.
* Code cleanups surrounding effects limits.
* Echo completed.
* BugFix: Segfault on creating new bank (empty string).
* Some small GUI improvements.

2018-2-7 Will
* Some small improvements to 'reads'.
* Corrected wrong dates in Changelog!
  The dangers of copy-paste :(

2018-2-4 Will
* Merged in new limits code.
* Considerable updates to dev_notes.
* BugFix: Importing keymap not updating GUI.
* Further refinements to data read function.
* Small improvements to master reset behavour.
* More doc updates.

2018-2-3 Will
[LIMITS] First refactoring of this.
         Quite a few ommisions.
         Seems to be correct for MIDI-learn
         but may still be some errors.
[LIMITS] Made some corrections and optimisations.
[LIMITS] Last? optimisations.

2018-2-1 Will
* PadSynth 'busy' also reported to the GUI.
* Removed redundant 'apply' code from Part.
* Doc updates.

2018-1-31 Will
* Applied extra safety features when changing PadSynth.
  Attempting to read or write to it at this time gives:
  "Part [n] busy"

2018-1-30 Will
* Master Reset and Stop! now clear the VU meters.
* MIDI buffer full reports to selected destination.
* Some doc updates.

2018-1-29 Will
* BugFix: Part effects not MIDI-learned correctly :(
  This is a quick 'n dirty fix. The whole of the
  limits structure needs refactoring!

2018-1-28 Will
* Made VU still read if very slow part load blocks.
  Need to improve this :(

2018-1-27 Will
* Rationalised PadSynth calls.

2018-1-26 Will
* Removed no longer needed VU ring buffer.
* GUI VU meter display now fully detached :)
* Updated docs.

2018-1-25 Will